# learning-ai-agents

./: .env.example  .gitignore  CLAUDE.md  README.md  SPECIFICATION.md  coverage.xml  pyproject.toml  requirements-dev.txt  test_adaptive_system.py  test_mvp_manual.py  test_topic_extraction.py
.github/workflows/: test.yml
AgentsExplanations/: question-agent-spec.md
AgentsExplanations/agents/: concept-agent.md  followup-judge.md  ingestion-agent.md  orchestrator.md  question-planner.md  relationship-agent.md
adk/: README.md  __init__.py  agent.py  difficulty.py  question_pipeline.py  quiz_tools.py  rag_setup.py  requirements.txt  run_dev.py  run_quiz.py  scaffolding.py  storage.py  tools.py
planning/: INITIAL-PLAN.MD  building-adaptive-quiz-agent-google-adk.md  enhancements.md
planning/kaggle-days/: day1-explanation.md  day2-explanation.md  day3-explanation.md  day4-explanation.md  day5-explanation.md
specs/001-adaptive-difficulty/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-pdf-reports/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/003-test-evaluation/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/004-storage-enhancements/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/005-production-deployment/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/006-knowledge-graph-schema/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
tests/: conftest.py
tests/unit/: test_difficulty.py  (+5 more)
(+51 files in other folders)
